--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
   flutter_svg: ^2.0.17
   dio: ^5.8.0
   get_it: ^8.0.3
+  youtube_player_flutter: ^9.1.1
+  google_sign_in: ^6.3.0
+  firebase_auth: ^5.5.1
+  firebase_core: ^3.12.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -76,6 +80,30 @@ flutter:
     - assets/images/img_news.png
     - assets/images/img_sport.png
     - assets/images/img_trending.png
+
+    - assets/vectors/attach_money_light_mode.svg
+    - assets/vectors/bar_chart_light_mode.svg
+    - assets/vectors/help_outline_light_mode.svg
+    - assets/vectors/incognito_light_mode.svg
+    - assets/vectors/launch_light_mode.svg
+    - assets/vectors/person_outline_light_mode.svg
+    - assets/vectors/play_button_light_mode.svg
+    - assets/vectors/settings_light_mode.svg
+    - assets/vectors/settings_studio_light_mode.svg
+    - assets/vectors/verified_user_light_mode.svg
+    - assets/vectors/video_library_light_mode.svg
+    
+    - assets/vectors/attach_money_dark_mode.svg
+    - assets/vectors/bar_chart_dark_mode.svg
+    - assets/vectors/help_outline_dark_mode.svg
+    - assets/vectors/incognito_dark_mode.svg
+    - assets/vectors/launch_dark_mode.svg
+    - assets/vectors/person_outline_dark_mode.svg
+    - assets/vectors/play_button_dark_mode.svg
+    - assets/vectors/settings_dark_mode.svg
+    - assets/vectors/settings_studio_dark_mode.svg
+    - assets/vectors/verified_user_dark_mode.svg
+    - assets/vectors/video_library_dark_mode.svg
 
 
 
