--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <uses-permission android:name="android.permission.INTERNET" />
 <uses-permission android:name="android.permission.CAMERA" />
     <application
-        android:label="youtube"
+        android:label="Youtube demo"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
