--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   google_sign_in: ^6.3.0
   firebase_auth: ^5.5.1
   firebase_core: ^3.12.1
+  shared_preferences: ^2.5.3
+  # youtube_player_iframe: ^5.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -117,5 +119,6 @@ flutter:
     - assets/vectors/ic_like_dark_mode.svg
     - assets/vectors/ic_local_movies_dark_mode.svg
     - assets/vectors/ic_play_dark_mode.svg
+    - assets/vectors/ic_logout.svg
 
 
